main app now works on iOS, without scrolling issues; Updated error message placement for desktop version; moved components into flex boxes

--- a/bicycleparking/static/src/style/mobilesheet.css
+++ b/bicycleparking/static/src/style/mobilesheet.css
@@ -84,10 +84,6 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     height: 100%;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -99,15 +95,16 @@ header{
     order: 1;
     position: relative;
     width: 100%;
-    max-height: 10%;
-    height: 10vh;
+    height: 10%;
     background-color: #fff;
     z-index: 1000;
+    margin-bottom: 2%;
+    display: flex;
 }
 
 .title {
     background: url(assets/icons/bikespace_header.svg) no-repeat center center;
-    background-size: 30vh;
+    background-size: calc(30vh);
     height: 100%;
     margin: auto;
     width: 30vh;
@@ -119,8 +116,8 @@ header{
     position: fixed;
     z-index: 10000;
     width: 100%;
-    max-height: 10%;
-    height: 10vh;
+    height: 10%;
+    padding-bottom: 0.5vh;
 }
 
 
@@ -220,13 +217,10 @@ header{
 .screen1 {
     order: 2;
     margin-left: 2%;
-    display: -webkit-flex;
     display: flex;
-    max-height: 78%;
-    height: 78vh;
+    height: 77%;
     flex-direction: column;
     margin-right: 2%;
-    margin-bottom: 2vw;
 }
 .clear {
     opacity: 0;
@@ -265,11 +259,9 @@ header{
 
 .cameraButton{
     opacity: 0;
-    margin-top: -30vh;
+    margin-top: -30%;
     width: 93%;
-    z-index: 1000;
-    max-height: 20%;
-    height: 20vh;
+    height: 25%;
 }
 
 .check {    
@@ -328,7 +320,7 @@ header{
 
 .nav {
     order: 3;
-    height: 10vh;
+    height: 10%;
     max-height: 10%;
     background-color: #fffffff5;
     margin-left: 2%;
@@ -336,8 +328,8 @@ header{
 }
 .back {
     box-shadow: 0px 0px 0px 0.6vw #25c252 inset;
-    height: 10vw;
-    width: 24vw;
+    height: 6vw;
+    width: 20vw;
     border-radius: 10vw;
     margin-left: 3vh;
     text-align: center;
@@ -394,11 +386,8 @@ header{
     color: #fff
 }
 .removePhoto {
-    margin-top: -25vw;
-    z-index: -1000;
-}
-#buttonRed {
-    z-index: 10;
+    margin-top: -15%;
+    z-index: 100000000;
 }
 
 /*SUMMARY___________________________________________________________*/
@@ -423,6 +412,7 @@ header{
 
 .hiddenPicture{
     opacity: 0 !important;
+    margin-top: 0%;
     height: 0 !important;
     z-index: -1000;
 }
